# pytorch_ssd_for_ros

./: CMakeLists.txt  README.md  package.xml  run_ssd_live_demo.py
docker/: Dockerfile  Dockerfile_old.txt  docker_run.sh  old_docker_run.sh  server_run.sh
launch/: ros_image_infer.launch
models/: open-images-model-labels.txt
ros/: image_infer.py
